@@ -1,3 +1,8 @@
+Tue Aug 23 10:15:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* string.c (rb_fs_setter): check and convert $; value at
+	  assignment.
+
 Tue Aug 23 02:09:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* string.c (rb_str_split_m): show $; name in error message when it
